fix scrollbar moving layout left

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@
 	width: 100%;
 	height: 100vh;
 }
+
+html {
+	overflow-x: hidden;
+	margin-right: calc(-1 * (100vw - 100%));
+}
